# epg-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/epg_tool/: __init__.py  cli.py
src/epg_tool/export/: ana_writer.py  parameters.py  plotting.py
src/epg_tool/features/: __init__.py  amplitude.py  base.py  baseline.py  peaks.py  shape.py  slope.py  spectral.py  wavelet.py  windowing.py
src/epg_tool/io/: ana.py  d0x.py  session.py
src/epg_tool/models/: base.py  postprocess.py  registry.py  rules.py  sequence.py  tabular.py
src/epg_tool/species/: profile.py
src/epg_tool/species/profiles/: diaphorina_citri.yaml
src/epg_tool/training/: dataset.py  evaluate.py
tests/: conftest.py  test_ana.py  test_ana_writer.py  test_d0x.py  test_dataset.py  test_evaluate.py  test_features.py  test_normalize_session.py  test_parameters.py  test_plotting.py  test_postprocess.py  test_rules.py  test_session.py  test_session_bytes.py  test_species_profile.py  test_tabular_models.py  test_trim_session.py
